--- a/package.json
+++ b/package.json
@@ -33,7 +33,18 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": [
+        "error",
+        {
+          "ignores": [
+            [
+              "Counter"
+            ]
+          ]
+        }
+      ]
+    }
   },
   "browserslist": [
     "> 1%",
