docs: transition-group with v-for animation modify

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
           "ignores": [
             [
               "Counter",
-              "Alert"
+              "Alert",
+              "Item"
             ]
           ]
         }
