--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-axios": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -35,7 +37,7 @@
     },
     "rules": {
       "vue/multi-word-component-names": [
-        "ignores",
+        "error",
         {
           "ignores": [
             [
