--- a/package.json
+++ b/package.json
@@ -36,18 +36,7 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/multi-word-component-names": [
-        "error",
-        {
-          "ignores": [
-            [
-              "Counter",
-              "Alert",
-              "Item"
-            ]
-          ]
-        }
-      ]
+      "vue/multi-word-component-names": "off"
     }
   },
   "browserslist": [
