--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
-    "vue-axios": "^3.5.2"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
