--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "ndekocode-portfolio",
-  "private": true,
+  "name": "vue3-discovery",
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.3.4",
-    "vue": "^3.2.45",
-    "vue-axios": "^3.5.2",
-    "vue-router": "^4.1.6",
-    "vuex": "^4.1.0"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.1.0"
+    "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.9"
   }
 }
