--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "axios": "^1.4.0",
+    "vue": "^3.3.4",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
+    "node-sass": "^9.0.0",
     "postcss": "^8.4.24",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
