--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.2.1",
     "node-sass": "^9.0.0",
     "postcss": "^8.4.24",
     "sass": "^1.63.6",
